[metadata]
name = ultra-prot
author = Santiago Castro Dau
author_email = fake@email.org
maintainer = Santiago Castro Dau
maintainer_email = fake@email.org
version = 0.1.0
description = Reproduction of the analysis made in: Ultra-high sensitivity mass spectrometry quantifies single-cell proteome changes upon perturbation, 2022
long_description = file: README.md, LICENSE
keywords = Ultra-high sensitivity mass spectrometry quantifies single-cell proteome changes upon perturbation
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests>=2.28.1
    pycountry>=22.3.5

[options.packages.find]
where=src